[package]
name = "pixlrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
image = "0.24.7"
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
